# multextification

./: README.md  pyproject.toml
data/: the_call_of_cthulhu.txt  the_call_of_cthulhu_metrics.json
notebooks/: scratchpad.ipynb
